--- a/home.html
+++ b/home.html
@@ -18,6 +18,21 @@
                 </ul>
             </div>
             
+            <div class="burger-menu" onclick="burgerMenuClick()">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+            </div>
+
+            <div class="page-selection-burger-menu">
+                <ul class="hide" id=burgerMenuSelection>
+                    <li><a class="home-bm" href="home.html"> Home </a></li>
+                    <li><a class="products-bm" href="products.html"> Products </a></li>
+                    <li><a class="cart-bm" href="cart.html"> Cart </a></li>
+                </ul>
+            </div>
+        </div>
+
         <div class="footer">
             <div class="footer-links">
                 <h1> Links </h1>
