--- a/home.html
+++ b/home.html
@@ -66,6 +66,10 @@
             <p class="home-content">
                 Every student at The University of Central Lancashire is automatically a member of the Student's Union. We're here to make life better for students - inspiring you to succeed and achieve your goals.
             </p>
+            <h2 class="video-title">Together</h2>
+            <iframe class="video" title="together-video" src="https://www.youtube.com/embed/0478w5CqJm0" controls></iframe>
+            <h2 class="video-title">Join our gobal community</h2>
+            <video class="video" title="gobal-community-video" src="UCLan Together – Join our global community.mp4" type="video/mp4" controls></video>
         </div>
         
         <script src="standard.js"></script>
