corrected a spelling mistake on the home page

--- a/home.html
+++ b/home.html
@@ -68,8 +68,8 @@
             </p>
             <h2 class="video-title">Together</h2>
             <iframe class="video" title="together-video" src="https://www.youtube.com/embed/0478w5CqJm0" controls></iframe>
-            <h2 class="video-title">Join our gobal community</h2>
-            <video class="video" title="gobal-community-video" src="UCLan Together – Join our global community.mp4" type="video/mp4" controls></video>
+            <h2 class="video-title">Join our global community</h2>
+            <video class="video" title="global-community-video" src="UCLan Together – Join our global community.mp4" type="video/mp4" controls></video>
         </div>
         
         <script src="standard.js"></script>
