Started commenting for home.html

--- a/home.html
+++ b/home.html
@@ -1,18 +1,24 @@
 <html>
     <head> 
-        <link rel="stylesheet" href="formats.css">
-        <title> UCLAN Student Clothes Store </title>
+        <link rel="stylesheet" href="formats.css"> <!--This is a reference to the formats.css file to link the css code to this html page-->
+        <title> UCLAN Student Clothes Store </title> <!--This is the name of the webpage shown on the tab during runtime-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
+    <!--Inside this is the content of the page.
+    On most of the tags there is a 'class=' which refers back to the
+    css file, which formats the content of each class uniquely-->
     <body> 
+        <!--This is a division for the navigation bar of the home page-->
         <div class="nav-bar">
-            <img class="logo" src="UCLAN-logo.png">    
-            <h1 class="site-title"> Student Clothes Store </h1>
-        
+            <img class="logo" src="UCLAN-logo.png"> <!--This finds and places the image UCLAN-logo.png onto the page-->    
+            <h1 class="site-title"> Student Clothes Store </h1> <!--This is the title of the page that is shown at the top of the page, in the navigation bar-->
+            
+            <!--This is another division but for the buttons to navigate across the site-->
             <div class="page-selection">
                 <ul>
-                    <li><a class="home" href="home.html"> Home </a></li>
+                    <!--Each of these three tags are buttons that allow the user to navigate through different pages-->
+                    <li><a class="home" href="home.html"> Home </a></li> 
                     <li><a class="products" href="products.html"> Products </a></li>
                     <li><a class="cart" href="cart.html"> Cart </a></li>
                 </ul>
