Corrected the 'Home' navigation button, directing it to index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <div class="page-selection-burger-menu">
                 <ul class="hide" id=burgerMenuSelection>
-                    <li><a class="home-bm" href="home.html"> Home </a></li>
+                    <li><a class="home-bm" href="index.html"> Home </a></li>
                     <li><a class="products-bm" href="products.html"> Products </a></li>
                     <li><a class="cart-bm" href="cart.html"> Cart </a></li>
                 </ul>
