--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
         
             <div class="page-selection">
                 <ul>
-                    <li><a class="home" href="home.html"> Home </a></li>
+                    <li><a class="home" href="index.html"> Home </a></li>
                     <li><a class="products" href="products.html"> Products </a></li>
                     <li><a class="cart" href="cart.html"> Cart </a></li>
                 </ul>
