--- a/cart.html
+++ b/cart.html
@@ -12,9 +12,9 @@
         
             <div class="page-selection">
                 <ul>
-                    <li><a class="home" href="index.html"> Home </a></li>
-                    <li><a class="products" href="products.html"> Products </a></li>
-                    <li><a class="cart" href="cart.html"> Cart </a></li>
+                    <li><a href="index.html"> Home </a></li>
+                    <li><a href="products.html"> Products </a></li>
+                    <li><a href="cart.html"> Cart </a></li>
                 </ul>
             </div>
             
