--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="page-selection">
                 <ul>
                     <!--Each of these three tags are buttons that allow the user to navigate through different pages-->
-                    <li><a class="home" href="index.html"> Home </a></li> 
-                    <li><a class="products" href="products.html"> Products </a></li>
-                    <li><a class="cart" href="cart.html"> Cart </a></li>
+                    <li><a href="index.html"> Home </a></li> 
+                    <li><a href="products.html"> Products </a></li>
+                    <li><a href="cart.html"> Cart </a></li>
                 </ul>
             </div>
             
