Added the filters a tags

--- a/products.html
+++ b/products.html
@@ -33,6 +33,15 @@
             </div>
         </div>
 
+        <div class="filters">
+            <ul>
+                <li><a>All</a></li>
+                <li><a>Hoodies</a></li>
+                <li><a>Jumpers</a></li>
+                <li><a>T-Shirts</a></li>
+            </ul>
+        </div>
+
         <div class="products" id="productsContainer">
         </div>
 
