Added the products page navigation to each product type

--- a/products.html
+++ b/products.html
@@ -33,14 +33,15 @@
             </div>
         </div>
 
-        <div class="filters">
+        <div class="prod-nav">
             <ul>
-                <li><a>All</a></li>
-                <li><a>Hoodies</a></li>
-                <li><a>Jumpers</a></li>
-                <li><a>T-Shirts</a></li>
+                <li><a href="#idHoodies">Hoodies |</a></li>
+                <li><a href="#idJumpers"> Jumpers |</a></li>
+                <li><a href="#idTshirts"> T-Shirts</a></li>
             </ul>
         </div>
+
+        <a class="back-to-top" href="#top">Back To Top</a>
 
         <div class="products" id="productsContainer">
         </div>
