--- a/cart.html
+++ b/cart.html
@@ -33,6 +33,34 @@
             </div>
         </div>
 
+        <div class="cart">
+            <h1 class="cart-title">Shopping Cart</h1>
+            <p>The items added to your shopping cart are:</p>
+
+            <div class="cart-content">
+                <div class="item1">
+                    <div><p class="item-num">1</p></div>
+                    <div><img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black.jpg"></div>
+                    <div><p class="cart-prod">UCLan Logo Hoodie Black</p></div>
+                    <div><p class="cart-price">£39.99</p></div>
+                </div>
+
+                <div class="item2">
+                    <div><p class="item-num">2</p></div>
+                    <div><img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black2.jpg"></div>
+                    <div><p class="cart-prod">UCLan Logo Hoodie Black 2</p></div>
+                    <div><p class="cart-price">£39.99</p></div>
+                </div>
+
+                <div class="item3">
+                    <div><p class="item-num">3</p></div>
+                    <div><img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Bright-Green.jpg"></div>
+                    <div><p class="cart-prod">UCLan Logo Hoodie Bright Green</p></div>
+                    <div><p class="cart-price">£39.99</p></div>
+                </div>
+            </div>
+        </div>
+
         <div class="footer">
             <div class="footer-headings">
                 <h1> Links </h1>
