--- a/cart.html
+++ b/cart.html
@@ -47,25 +47,20 @@
             <p>The items added to your shopping cart are:</p>
 
             <div class="cart-content">
-                <div class="item1">
-                    <div><p class="item-num">1</p></div>
-                    <div><img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black.jpg"></div>
-                    <div><p class="cart-prod">UCLan Logo Hoodie Black</p></div>
-                    <div><p class="cart-price">£39.99</p></div>
+                <div class="item">
+                    <p class="item-num">1</p>
+                    <img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black.jpg">   
+                    <p class="cart-prod">UCLan Logo Hoodie Black</p>        
+                    <p class="cart-price">£39.99</p>
+                    <a class="remove">Remove</a>
                 </div>
 
-                <div class="item2">
-                    <div><p class="item-num">2</p></div>
-                    <div><img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black2.jpg"></div>
-                    <div><p class="cart-prod">UCLan Logo Hoodie Black 2</p></div>
-                    <div><p class="cart-price">£39.99</p></div>
-                </div>
-
-                <div class="item3">
-                    <div><p class="item-num">3</p></div>
-                    <div><img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Bright-Green.jpg"></div>
-                    <div><p class="cart-prod">UCLan Logo Hoodie Bright Green</p></div>
-                    <div><p class="cart-price">£39.99</p></div>
+                <div class="item">
+                    <p class="item-num">2</p>
+                    <img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black2.jpg">   
+                    <p class="cart-prod">UCLan Logo Hoodie Black 2</p>        
+                    <p class="cart-price">£39.99</p>
+                    <a class="remove">Remove</a>
                 </div>
             </div>
         </div>
