Attempts to create cart.html work efficiently. Added the anotated wireframes

--- a/cart.html
+++ b/cart.html
@@ -46,8 +46,8 @@
             <h1 class="cart-title">Shopping Cart</h1>
             <p>The items added to your shopping cart are:</p>
 
-            <div class="cart-content">
-                <div class="item">
+            <div class="cart-content" id="cart-container">
+                <div class="item-card">
                     <p class="item-num">1</p>
                     <img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black.jpg">   
                     <p class="cart-prod">UCLan Logo Hoodie Black</p>        
@@ -55,7 +55,7 @@
                     <a class="remove">Remove</a>
                 </div>
 
-                <div class="item">
+                <div class="item-card">
                     <p class="item-num">2</p>
                     <img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black2.jpg">   
                     <p class="cart-prod">UCLan Logo Hoodie Black 2</p>        
@@ -94,7 +94,7 @@
             </div>
         </div>
         
-        
+        <script src="cart.js"></script>
         <script src="standard.js"></script>
     </body>
 </html>
