--- a/cart.html
+++ b/cart.html
@@ -46,7 +46,7 @@
             <h1 class="cart-title">Shopping Cart</h1>
             <p>The items added to your shopping cart are:</p>
 
-            <div class="cart-content" id="cart-container">
+            <div class="cart-content" id="cartContainer">
                 <div class="item-card">
                     <p class="item-num">1</p>
                     <img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black.jpg">   
