cart.html and cart.js now work together in order to show the uesr their shopping cart

--- a/cart.html
+++ b/cart.html
@@ -46,22 +46,12 @@
             <h1 class="cart-title">Shopping Cart</h1>
             <p>The items added to your shopping cart are:</p>
 
-            <div class="cart-content" id="cartContainer">
-                <div class="item-card">
-                    <p class="item-num">1</p>
-                    <img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black.jpg">   
-                    <p class="cart-prod">UCLan Logo Hoodie Black</p>        
-                    <p class="cart-price">£39.99</p>
-                    <a class="remove">Remove</a>
-                </div>
-
-                <div class="item-card">
-                    <p class="item-num">2</p>
-                    <img class="cart-prod-img" src="store-items/UCLan-Logo-Hoodie-Black2.jpg">   
-                    <p class="cart-prod">UCLan Logo Hoodie Black 2</p>        
-                    <p class="cart-price">£39.99</p>
-                    <a class="remove">Remove</a>
-                </div>
+            <div class="cart-content" id="cartContainer"> 
+                <div class="hide" id="cartNone">
+                    <div class="empty-cart">
+                        <h2 class="empty-cart-title">Your Cart is Empty</h2>
+                    </div>
+                </div>         
             </div>
         </div>
 
