Added readmore.js and functionality to item.html allowing the users to read more on each product

--- a/item.html
+++ b/item.html
@@ -41,12 +41,7 @@
             </div>
         </div>
 
-        <div class="product-container">
-            <img class="rm-prod-img" src="store-items/UCLan-Logo-Hoodie-Black.jpg">
-            <p class="rm-prod-title">Black Hoodie</p> 
-            <p class="rm-prod-info">cotton authentic character and practicality are combined in this comfy  warm and luxury hoodie for students that goes with everything to create casual looks</p>
-            <p class="rm-prod-price">£39.99</p>
-            <a class="buy">Buy</a>
+        <div class="product-container" id="readMoreContainer">
         </div>
         
         <!--The below div is the contents of the footer-->
@@ -78,7 +73,7 @@
             </div>
         </div>
 
-        <script src="products.js"></script>
+        <script src="readmore.js"></script>
         <script src="standard.js"></script> <!--This links the JavaScript file standard.js to this, allowing the use of the hamburger menu (https://www.w3schools.com/howto/howto_css_menu_icon.asp)-->
     </body>
 </html>
