--- a/cart.html
+++ b/cart.html
@@ -47,6 +47,8 @@
             <p>The items added to your shopping cart are:</p>
 
             <div class="cart-content" id="cartContainer"> 
+
+                <!--This div is an empty container only shown when the user's cart is empty-->
                 <div class="hide" id="cartNone">
                     <div class="empty-cart">
                         <h2 class="empty-cart-title">Your Cart is Empty</h2>
