--- a/item.html
+++ b/item.html
@@ -41,6 +41,7 @@
             </div>
         </div>
 
+        <!--This div contains the contents of the enlarged product card shown to the user-->
         <div class="product-container" id="readMoreContainer">
         </div>
         
@@ -73,7 +74,7 @@
             </div>
         </div>
 
-        <script src="readmore.js"></script>
+        <script src="readmore.js"></script> <!--This links the JavaScript file readmore.js to this page-->
         <script src="standard.js"></script> <!--This links the JavaScript file standard.js to this, allowing the use of the hamburger menu (https://www.w3schools.com/howto/howto_css_menu_icon.asp)-->
     </body>
 </html>
