--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head> 
-        <link rel="stylesheet" href="formats.css"> <!--This is a reference to the formats.css file to link the css code to this html page-->
-        <title> UCLAN Student Clothes Store </title> <!--This is the name of the webpage shown on the tab during runtime-->
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> UCLAN Student Clothes Store </title> <!--This is the name of the webpage shown on the tab during runtime-->
+        <link rel="stylesheet" href="formats.css"> <!--This is a reference to the formats.css file to link the css code to this html page-->
     </head>
 
     <!--Inside this is the content of the page.
@@ -11,7 +14,7 @@
     <body> 
         <!--This is a division for the navigation bar of the home page-->
         <div class="nav-bar">
-            <img class="logo" src="UCLAN-logo.png"> <!--This finds and places the image UCLAN-logo.png onto the page-->    
+            <img class="logo" src="UCLAN-logo.png" alt="UCLan Logo"> <!--This finds and places the image UCLAN-logo.png onto the page-->    
             <h1 class="site-title"> Student Clothes Store </h1> <!--This is the title of the page that is shown at the top of the page, in the navigation bar-->
             
             <!--This is another division but for the buttons to navigate across the site-->
@@ -48,9 +51,11 @@
                 Every student at The University of Central Lancashire is automatically a member of the Student's Union. We're here to make life better for students - inspiring you to succeed and achieve your goals.
             </p>
             <h2 class="video-title">Together</h2>
-            <iframe class="video" title="together-video" src="https://www.youtube.com/embed/xTvk2OCMyWE" controls></iframe> <!--This is the first video that is an embedded YouTube video-->
+            <iframe class="video" title="together-video" src="https://www.youtube.com/embed/xTvk2OCMyWE"></iframe> <!--This is the first video that is an embedded YouTube video-->
             <h2 class="video-title">Join our global community</h2>
-            <video class="video" title="global-community-video" src="UCLan Together – Join our global community.mp4" type="video/mp4" controls></video> <!--The second video that is a downloaded mp4-->
+            <video controls class="video" title="global-community-video">
+                <source src="UCLan-Together–Join-our-global-community.mp4" type="video/mp4">
+            </video> <!--The second video that is a downloaded mp4-->
         </div>
         
         <!--The below div is the contents of the footer-->
