Validation errors corrected (FINAL COMMIT)

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <iframe class="video" title="together-video" src="https://www.youtube.com/embed/xTvk2OCMyWE"></iframe> <!--This is the first video that is an embedded YouTube video-->
             <h2 class="video-title">Join our global community</h2>
             <video controls class="video" title="global-community-video">
-                <source src="UCLan-Together–Join-our-global-community.mp4" type="video/mp4">
+                <source src="./UCLan-Together-Join-our-global-community.mp4" type="video/mp4" />
             </video> <!--The second video that is a downloaded mp4-->
         </div>
         
